# sop-recorder

./: .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  package-lock.json  package.json  vitest.config.ts
.github/workflows/: ci.yml  release.yml
scripts/: sign.cmd
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.signing.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  lib.rs  main.rs  state.rs  tray.rs
src-tauri/src/capture/: audio.rs  input_hooks.rs  mod.rs  screenshot.rs
src-tauri/src/commands/: auth.rs  generate.rs  mod.rs  permissions.rs  quota.rs  recording.rs  settings.rs  window.rs
src-tauri/src/network/: auth.rs  jobs.rs  mod.rs  quota.rs  sse.rs  upload.rs
src-tauri/src/output/: markdown.rs  mod.rs  pdf.rs  pending.rs  step_meta.rs
src/components/: LoginScreen.tsx  PiiBlockedModal.tsx  RateLimitModal.tsx  RecorderScreen.tsx  ReviewScreen.tsx  SettingsPage.tsx  StatusBar.tsx
src/hooks/: useAudioLevel.ts  useAuth.ts  useCaptureCount.ts  useElapsedTime.ts  useQuota.ts  useRecorder.ts  useSSE.ts  useTranslation.ts  useUpdater.ts
src/i18n/: de.ts  index.ts
src/lib/: serverErrors.ts  tauri.ts
src/test/: components.test.tsx  i18n.test.ts  settings.test.tsx  setup.ts  useAuth.test.ts  useRecorder.test.ts
