[package]
name = "cogniclone-recorder"
version = "0.12.0"
description = "CogniClone Recorder"
authors = ["CogniClone"]
license = "BSL-1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sop_recorder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-log = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["multipart", "stream", "json"] }
reqwest-eventsource = "0.6"
keyring = { version = "3", features = ["windows-native"] }
xcap = "0.0.14"
cpal = "0.15"
hound = "3.5"
rdev = "0.5"
image = "0.25"
imageproc = "0.25"
genpdf = { version = "0.2", features = ["images"] }
chrono = "0.4"
tempfile = "3"
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
thiserror = "2"
dirs-next = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Graphics_Gdi",
  "Win32_UI_HiDpi",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Foundation",
] }
